syntax = "proto3";
package cheetah.matches.factory.admin;
option csharp_namespace = "Cheetah.Matches.Factory.Editor.Admin.GRPC";

/**
 Общие команды для получения информации и управления сервером
 */
service Configurations {
  /**
  Получить имена полей и шаблоной
 */
  rpc GetItemNames(GetItemsNamesRequest) returns(GetItemsNamesResponse);
}

message GetItemsNamesRequest {

}

message GetItemsNamesResponse {
  repeated TemplateInfo templates = 1;
  repeated FieldInfo fields = 2;
}

message TemplateInfo {
  uint32  id = 1;
  string name = 3 ;
}
message FieldInfo {
  uint32  id = 1;
  FieldType type = 2;
  string name = 3;
}

enum FieldType {
  long = 0;
  double = 1;
  structure = 2;
  event = 3;
}
